# yt-search

./: .gitignore  README.md  docker-compose.yml  install.sh  parse_srt.py  pyproject.toml  rag_prototype.ipynb  rag_v1.py  rag_v2.py  rag_v3.py  requirements.txt  run_v1.sh  run_v2.sh  run_v3.sh  srt_to_txt.py
backend/: Dockerfile  main.py  processing.py  rag.py  requirements.txt  requirements_bkp.txt  run.sh
data/tmp_srt/: 70 Women Ages 5-75： What’s The Meaning of Life？ ｜ Glamour [Fn7A_Ez7Nsw].en.srt  Alan Watts - The Meaning Of Life [EDqqB8kh_Ek].en.srt  Anthony Hopkins - What's The Meaning Of Life ｜ One Of The Most Eye Opening Speeches [kuR5OhK5B_U].en.srt  Carl Jung - How to Find Your Purpose [AyRKT8MLTwQ].en.srt  Finding Something to Live and Die For ｜ The Philosophy of Viktor Frankl [JX-8-IYhQKk].en.srt  Finding the Meaning of YOUR Life： The Psychological Perspective [oRrbZp-iCqk].en.srt  Galaxy Song - Monty Python's The Meaning of Life [buqtdpuZxvk].en.srt  Happiness is NOT the Meaning of Life - Alan Watts [RsdoJ9x8IBs].en.srt  How to Live a Meaningful Life ｜ Brian S. Lowery ｜ TED [mGeGLLsiy44].en.srt  How to find purpose and meaning (when we get a little lost). [ZFsXLyey-sM].en.srt  (+34 more)
docs/: research.md
gradio_app/: app.py  requirements.txt
local/: convert_srt_to_txt.sh  download_yt_subtitles.sh  rag.py  rag_prototype.ipynb  requirements.txt  requirements_dev.txt  run.sh  srt_to_txt.py
outputs/: output_20250128_191115.txt
skill/yt-search/: SKILL.md
yt_search/: cli.py  governor.py  ingest.py  install_skill.py  models.py  retrieval.py  session.py
(+45 files in other folders)
